--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,16 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
-#   <<: *default
-#   database: db/test.sqlite3
+test:
+  <<: *default
+  database: online_store_test
+  username: 'postgres'
+  password: 'postgres'
+  host: localhost
 
-# production:
-#   <<: *default
-#   database: db/production.sqlite3
+production:
+  <<: *default
+  database: online_store_production
+  username: 'postgres'
+  password: 'postgres'
+  host: localhost
